--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile group: 'com.cloudinary', name: 'cloudinary-android', version: '1.13.0'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile 'com.airbnb.android:lottie:2.2.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
