--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '25.0.1'
     defaultConfig {
         applicationId "io.github.chaitya62.tripsharr"
-        minSdkVersion 19
+        minSdkVersion 22
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -24,11 +24,12 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile group: 'com.cloudinary', name: 'cloudinary-android', version: '1.13.0'
+    compile 'com.cloudinary:cloudinary-android:1.13.0'
+    compile 'com.android.support:cardview-v7:23.3.+'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile 'com.airbnb.android:lottie:2.2.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
