--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,7 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.cloudinary:cloudinary-android:1.13.0'
-    compile 'com.android.support:cardview-v7:23.3.+'
+    compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile 'com.airbnb.android:lottie:2.2.0'
     compile 'com.android.support:appcompat-v7:25.3.1'
