--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-      />
+        />
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
@@ -39,13 +39,11 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:label="@string/title_activity_home"
-            />
+            android:label="@string/title_activity_home" />
         <activity
             android:name=".CreateTripActivity"
             android:label="Create Trip"
-            android:windowSoftInputMode="adjustResize"
-            />
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".NavigationActivity" />
         <activity
             android:name=".ViewTripActivity"
@@ -85,7 +83,8 @@
             android:label="@string/title_activity_maps" />
         <activity
             android:name=".testActivity"
-            android:label="@string/title_activity_test"></activity>
+            android:label="@string/title_activity_test" />
+        <activity android:name=".BottomSheet"></activity>
     </application>
 
 </manifest>
