--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
 
 repositories {
     mavenCentral()
+    maven{ url 'https://jitpack.io' }
 }
 
 dependencies {
@@ -29,6 +30,7 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+    compile 'com.github.qapqap:TimelineView:v1.6'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'com.cloudinary:cloudinary-android:1.13.0'
     compile 'com.facebook.android:facebook-android-sdk:4.0.0'
