--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,8 +101,9 @@
             android:label="@string/title_activity_ongoing_map" />
         <activity android:name=".ongoingtrips.EditCheckpointActivity" />
         <activity android:name=".ongoingtrips.AddCheckpointActivity" />
-        <activity android:name=".ongoingtrips.MediaCollectionActivity"/>
-        <activity android:name=".ViewTripTimeLine"></activity>
+        <activity android:name=".ongoingtrips.MediaCollectionActivity" />
+        <activity android:name=".ViewTripTimeLine" />
+        <activity android:name=".NoInternet"></activity>
     </application>
 
 </manifest>
